--- a/html/header.html
+++ b/html/header.html
@@ -1,1 +1,47 @@
-
+<svg class="hidden" style="display: none;">
+    <!-- close button -->
+    <symbol id="shape-close" viewBox="0 0 25 25">
+      <path d="M 5 19 L 19 5 L 21 7 L 7 21 L 5 19 ZM 7 5 L 21 19 L 19 21 L 5 7 L 7 5 Z"/>
+    </symbol>
+    <! -- Relevant Dataset -->
+    <symbol id="shape-relevant" viewBox="0 0 66 66">
+    <path d="M 17 16.903 L 17 34.097 C 17 36.8049 19.8161 39 22.5726 39 L 45 39 L 45 45.9343 L 53.1217 39 L 57.009 39 C 59.7655 39 62 36.8049 62 34.097 L 62 16.903 C 62 14.1951 59.7655 12 57.009 12 L 21.9909 12 C 19.2344 12 17 14.1951 17 16.903 Z" fill="#ffffff"/>
+    <path d="M 32.1931 27.2858 C 32.1218 27.2159 31.593 27 31.4932 27 L 7.8741 27 C 7.7744 27 7.2455 27.2159 7.1742 27.2858 L 3.8 30.5076 C 3.7241 30.582 3.5 31.1155 3.5 31.2219 C 3.5 39.2133 0.2153 48.7083 13.155 47.15 L 21.3523 53.762 C 22.1605 54.4489 23.0002 54.0605 23 52.9998 L 23 47.26 C 31.2013 48.4448 36.0048 48.4928 36.3138 39.6322 C 36.3914 37.4092 35.8673 34.6261 35.8673 31.2219 C 35.8673 31.1155 35.6432 30.582 35.5673 30.5076 L 32.1931 27.2858 ZM 31.085 29 L 33.87 31.725 C 33.8764 34.3108 34.8144 41.8456 33.405 44.095 C 30.8828 48.1201 21 43.0454 21 46.1002 L 21 50.835 L 14.5327 45.3381 C 13.3542 44.3363 6.7166 47.0607 5.4816 42.6078 C 4.7532 39.9819 5.4754 34.6169 5.5 31.73 L 8.28 29 L 31.085 29 Z" fill="#ffffff"/>
+    </symbol>
+    <!-- Recent Dataset -->
+    <symbol id="shape-recent" viewBox="-12 -9 66 66">
+        <g>
+        <path d="M 41 7.2538 C 41 11.2599 31.8218 14.5076 20.4999 14.5076 C 9.1781 14.5076 0.0001 11.2599 0.0001 7.2538 C 0.0001 3.2477 9.1781 0 20.4999 0 C 31.8218 0 41 3.2477 41 7.2538 Z" fill="#ffffff"/>
+      <path d="M 36.9353 9.205 C 33.1974 10.9759 27.227 12.1224 20.4999 12.1224 C 13.7728 12.1224 7.8026 10.9759 4.0646 9.205 C 2.3516 8.4904 0.9865 7.6647 0 6.7567 L 0 15.0055 C 0 19.0117 9.1782 22.2592 20.4999 22.2592 C 31.8218 22.2592 41 19.0117 41 15.0055 L 41 6.7567 C 40.0134 7.6647 38.6482 8.4904 36.9353 9.205 Z" fill="#ffffff"/>
+      <path d="M 35.701 22.8334 C 31.6104 24.2809 26.2119 25.0781 20.4999 25.0781 C 14.788 25.0781 9.3895 24.2809 5.299 22.8334 C 2.9984 22.0194 1.213 21.0273 0 19.9109 L 0 27.8758 C 0 31.8821 9.1782 35.1296 20.4999 35.1296 C 31.8218 35.1296 41 31.8821 41 27.8758 L 41 19.9109 C 39.7869 21.0274 38.0016 22.0194 35.701 22.8334 Z" fill="#ffffff"/>
+      <path d="M 35.701 35.5924 C 33.7516 36.2823 31.5026 36.8224 29.0668 37.2009 C 26.4599 37.6259 23.5584 37.8632 20.4999 37.8632 C 17.4416 37.8632 14.5403 37.6259 11.9335 37.2009 C 9.4974 36.8224 7.2485 36.2823 5.299 35.5924 C 2.9984 34.7784 1.213 33.7863 0 32.6699 L 0 40.7462 C 0 44.7523 9.1782 48 20.4999 48 C 31.8218 48 41 44.7523 41 40.7462 L 41 32.6699 C 39.7869 33.7863 38.0016 34.7784 35.701 35.5924 Z" fill="#ffffff"/>
+    </symbol>
+</svg>
+<a href="#"></a>
+<div id="headerGfw"></div>
+  <div class="layout-header-bottom">
+    <div class="inner">
+      <h1><a href="/">Global Forest Watch</a></h1>
+      <a href="/" class="site-name">Open Data Portal</a>
+      <nav id="nav-mobile">
+        <ul class="mobile-hide">
+          <li>
+            <a href="http://data.globalforestwatch.org/">Home</a>
+          </li>
+          <li id="intro-step8">
+            <a class="no-link" href="#">Resources</a>
+            <ul class="submenu">
+                <li><a  href="http://www.globalforestwatch.org/howto/odp">How To</a></li>
+                <li><a target="_blank" href="http://gfw.maps.arcgis.com/home/">GFW on ArcGIS Online</a></li>
+                <li><a target="_blank" href="https://earthengine.google.org/#intro">GFW on Google Earth Engine</a></li>
+                <li><a href="http://www.globalforestwatch.org/about/data_policy">Data policy</a></li>
+                <li><a href="http://www.globalforestwatch.org/getinvolved/develop-your-own-app">Develop your own app</a></li>
+                <li><a target="_blank" href="http://gfw.blog.s3.amazonaws.com/Data%20Playbook/GFW%20Data%20Playbook%20v3.pdf">Data Playbook</a></li>
+                <li><a target="_blank" href="http://wri.github.io/gfw-sync/gfw_web_service_directory.html">GFW Web Service Directory</a></li>
+                <li><a href="/?tour=true">Take a Tour</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
